# TietoGame

./: CMakeLists.txt  Makefile.txt  Readme.txt  Tietogra.sln
Debug/: Tietogra.ilk
Mediator/: CMakeLists.txt  Main.cpp  Mediator.cpp  Mediator.h  Mediator.vcxproj  PlayerOne.ilk  mapa.txt  rezultaty.txt  rozkazy.txt  status.txt
Mediator/Debug/: vc141.idb
Mediator/Debug/Mediator.tlog/: link.command.1.tlog  link.read.1.tlog
PlayerOne/: Actors.h  CMakeLists.txt  Main.cpp  OrdersAndAI.cpp  OrdersAndAI.h  PlayerOne.vcxproj  PlayerOne.vcxproj.filters  rozkazy.txt  status.txt
PlayerOne/Debug/: ordersandai.obj.enc  vc141.idb
PlayerOne/Debug/PlayerOne.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog
Tietogra/: CMakeLists.txt  Main.cpp  Map.cpp  Map.h  Tietogra.sln  Tietogra.vcxproj  Tietogra.vcxproj.filters  mapa.txt
Tietogra/Debug/: Mediator.ilk  PlayerOne.ilk  mapa.txt  rozkazy.txt  status.txt  vc141.idb
Tietogra/Debug/Tietogra.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
Tietogra/Mediator/: Main.cpp  Mediator.cpp  Mediator.h  Mediator.vcxproj.filters  Tietogra.ilk  rozkazy.txt  wqer.txt
Tietogra/Mediator/Debug/: vc141.idb
Tietogra/Mediator/Debug/Mediator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mediator.lastbuildstate  link.write.1.tlog
Tietogra/PlayerOne/: Actors.cpp  Main.cpp  OrdersAndAI.cpp  OrdersAndAI.h  opcje.txt
Tietogra/PlayerOne/Debug/: vc141.idb
Tietogra/Tietogra/: Main.cpp  Map.cpp  Map.h
(+9 files in other folders)
